new file:   .env 	new file:   .env_example 	modified:   .gitignore 	modified:   1 copy.ipynb 	new file:   README.md 	new file:   data/QSO/example_output.md 	new file:   data/QSO/example_summary.md 	deleted:    data/QSO/output/QSO2_crop.png 	deleted:    data/QSO/output/QSO3_crop.png 	renamed:    data/QSO/output/QSO_crop.png -> data/QSO/output/QSO_cropped.png 	new file:   data/QSO/output/QSO_features.png 	new file:   data/QSO/output/QSO_spectrum.png 	deleted:    data/QSO/output/features.png 	deleted:    data/QSO/output/output.md 	deleted:    data/QSO/output/output.txt 	new file:   data/QSO/output/rule_analysis.md 	deleted:    data/QSO/output/spectrum.png 	new file:   data/QSO/output/summary.md 	modified:   debug.ipynb 	new file:   debug2.ipynb 	modified:   mcp_config.json 	new file:   src/_astro_agents_old.py 	modified:   src/astro_agents.py 	modified:   src/base_agent.py 	modified:   src/context_manager.py 	modified:   src/mcp_manager.py 	modified:   src/mcp_server_tools.py 	modified:   src/tools.py 	modified:   src/utils.py 	modified:   src/workflow_orchestrator.py

--- a/mcp_config.json
+++ b/mcp_config.json
@@ -1,11 +1,7 @@
 {
-  "servers": {
-    "finance-mcp": {
-      "transport": "streamable_http",
-      "url": "http://47.79.147.241:3100/mcp",
-      "headers": {
-        "X-Tushare-Token": "Your-Tushare-APIKEY-Here"
-      }
+    "spectro_tools": {
+        "command": "python",
+        "args": ["-m", "src.mcp_server_tools"],  
+        "transport": "stdio"
     }
-  }
 }
