modified:   .env 	modified:   1 copy.ipynb 	modified:   README.md 	deleted:    data/QSO/example_output.md 	deleted:    data/QSO/example_summary.md 	new file:   data/QSO/input/67.png 	new file:   data/QSO/input/QSO_0.png 	new file:   data/QSO/input/QSO_1.png 	new file:   data/QSO/input/QSO_2.png 	deleted:    data/QSO/output/QSO_cropped.png 	deleted:    data/QSO/output/QSO_features.png 	deleted:    data/QSO/output/QSO_spectrum.png 	deleted:    data/QSO/output/rule_analysis.md 	deleted:    data/QSO/output/summary.md 	new file:   data/pppics/150000895.png 	new file:   data/pppics/150001832.png 	new file:   data/pppics/150003187.png 	new file:   data/pppics/150004172.png 	new file:   data/pppics/150004981.png 	new file:   data/pppics/150005024.png 	new file:   data/pppics/150006895.png 	new file:   data/pppics/150008809.png 	new file:   data/pppics/150009233.png 	new file:   data/pppics/150010149.png 	new file:   data/pppics/150010629.png 	new file:   data/pppics/150011067.png 	new file:   data/pppics/150011524.png 	new file:   data/pppics/150014189.png 	new file:   data/pppics/150014678.png 	new file:   data/pppics/150015127.png 	new file:   data/pppics/150015128.png 	new file:   data/pppics/150017347.png 	new file:   data/pppics/150017788.png 	new file:   data/pppics/150019227.png 	new file:   data/pppics/150020982.png 	new file:   data/pppics/150021055.png 	new file:   data/pppics/150021464.png 	new file:   data/pppics/150021863.png 	new file:   data/pppics/150022395.png 	new file:   data/pppics/150025365.png 	new file:   data/pppics/150026685.png 	new file:   data/pppics/150026700.png 	new file:   data/pppics/150028784.png 	new file:   data/pppics/150029190.png 	new file:   data/pppics/150030558.png 	new file:   data/pppics/150031332.png 	new file:   data/pppics/150032190.png 	new file:   data/pppics/150033275.png 	new file:   data/pppics/150035271.png 	new file:   data/pppics/150037191.png 	new file:   data/pppics/150037876.png 	new file:   data/pppics/150037898.png

--- a/.env
+++ b/.env
@@ -16,6 +16,9 @@ VIS_LLM_TEMPERATURE=
 # VIS_LLM_MAX_TOKENS Default is None
 VIS_LLM_MAX_TOKENS=
 
+# MCP config path
+MCP_CONFIG = /home/wbc/code3/llm-spectro-agent/mcp_config.json
+
 
 # Input Directory
 # Directory where input images are stored
@@ -27,14 +30,14 @@ SINGLE_RUN=true
 
 # If SINGLE_RUN=true, set the image name to be processed (e.g., set IMAGE_NAME=QSO for QSO.png)
 # Image name for a single image (without extension)
-IMAGE_NAME=QSO
+IMAGE_NAME=67
 # If you set SINGLE_RUN=true, and your images are named QSO_0.png to QSO_100.png, set the following:
 # IMAGE_NAME_HEADER=QSO_  # Base name for a series of images
 # START=0                 # Starting index of the image series
 # END=100                 # Ending index of the image series
-IMAGE_NAME_HEADER=QSO_
-START=0
-END=100
+IMAGE_NAME_HEADER=
+START=150000895
+END=150094189
 
 # Output Directory
 # Directory where results will be stored
@@ -54,15 +57,16 @@ OUTPUT_DIR=/home/wbc/code3/llm-spectro-agent/data/QSO/output
 SIGMA_LIST=
 
 # TOL_PIXELS: Peaks within a pixel distance of <= TOL_PIXELS will be considered the same peak. Default is 5.
-TOL_PIXELS=
+TOL_PIXELS=10
 
 # WEIGHT_ORIGINAL: Weight of the original signal (from Opencv scan) in the weighted average wavelength calculation. Default is 1.0.
 WEIGHT_ORIGINAL=
 
-# PROM_THRESHOLD: Parameter for scipy.signal.find_peaks. Only peaks/troughs with prominence >= PROM_THRESHOLD will be identified. Default is 0.01.
+# PROM_THRESHOLD: Parameter for scipy.signal.find_peaks. Only peaks/troughs with prominence >= PROM_THRESHOLD will be identified. 
+# Default is 0.01.
 PROM_THRESHOLD_PEAKS=
+# Default is 0.05.
 PROM_THRESHOLD_TROUGHS=
-
 # Plotting Parameters for Features:
 # PLOT_FEATURE_NUMBER: Maximum number of peaks/troughs to plot in the illustrative figure.
 # Default is 10/15, meaning a maximum of 10 peaks/15 troughs will be shown in the plot.
@@ -74,4 +78,4 @@ PLOT_TROUGHS_NUMBER=
 
 # Max debate rounds for Spectral_Analysis_Auditor and Spectral_Refinement_Assistant.
 # Default is 3
-MAX_DEBATE_ROUNDS=3
+MAX_DEBATE_ROUNDS=1
