modified:   .env_example 	modified:   .gitignore

--- a/.env_example
+++ b/.env_example
@@ -21,7 +21,7 @@ VIS_LLM_TEMPERATURE=
 VIS_LLM_MAX_TOKENS=
 
 # MCP config path
-MCP_CONFIG = /home/wbc/code3/llm-spectro-agent/mcp_config.json
+MCP_CONFIG=/home/wbc/code3/llm-spectro-agent/mcp_config.json
 
 
 # Input Directory
