--- a/.env_example
+++ b/.env_example
@@ -23,6 +23,8 @@ VIS_LLM_MAX_TOKENS=
 # MCP config path
 MCP_CONFIG=/home/wbc/code3/llm-spectro-agent/mcp_config.json
 
+# Prompts path
+PROMPTS_PATH=/home/wbc/code3/llm-spectro-agent/prompt_template.json
 
 # Input Directory
 # Directory where your input images are stored
