modified:   .env_example

--- a/.env_example
+++ b/.env_example
@@ -54,6 +54,10 @@ OUTPUT_DIR=
 ###############################################################################
 ###############################################################################
 
+# Camera infomation
+BAND_NAME=B,R,Z
+BAND_WAVELENGTH=3600-5800,5760-7620,7520-9824
+
 # Optional Parameters for Signal Processing
 
 # Peak Finding Parameters:
