modified:   .env_example 	new file:   .requirements.txt 	modified:   data/test_set_2/A/output2/002_features.png 	deleted:    data/test_set_2/A/output2/002_rule_analysis.md 	deleted:    data/test_set_2/A/output2/002_summary.md 	modified:   data/test_set_2/A/output2/002_visual_interpretation.txt 	modified:   log/out.log 	modified:   requirements.txt 	modified:   src/utils.py

--- a/.env_example
+++ b/.env_example
@@ -84,6 +84,8 @@ PROM_THRESHOLD_TROUGHS=
 # Default is 10/15, meaning a maximum of 10 peaks/15 troughs will be shown in output {your_image_name}_features.png.
 PLOT_PEAKS_NUMBER=
 PLOT_TROUGHS_NUMBER=
+# In case you want use the wavelength as label. Default is false.
+LABEL=
 
 ###############################################################################
 ###############################################################################
