modified:   .env_example 	modified:   debug2.ipynb 	modified:   prompt/prompt_template.json 	modified:   prompt/prompt_template_EN.json 	modified:   src/astro_agents.py 	modified:   src/astro_agents_EN.py 	modified:   src/utils.py

--- a/.env_example
+++ b/.env_example
@@ -59,6 +59,9 @@ OUTPUT_DIR=
 # recommend to set approximately equal to 3*PNG-dpi. e.g., if PNG-dpi=100, set CONTINUUM_SMOOTHING_SIGMA=200
 CONTINUUM_SMOOTHING_SIGMA=200
 
+# DATA SET
+DATA_SET=CSST
+
 ###############################################################################
 # Optional
 ###############################################################################
