--- a/.env_example
+++ b/.env_example
@@ -81,9 +81,7 @@ BAND_WAVELENGTH=
 
 # Peak Finding Parameters:
 # The peak-finding process works by scanning the original signal and its Gaussian-smoothed version with several sigma scales.
-# If a peak is found at multiple scales with different wavelengths, the weighted average wavelength is computed:
-# averaged wavelength = (w_original * wavelength_original + Σ(w_i * wavelength_sigma_i)) / (w_original + Σ(w_i))
-# where w_i = 1 / sqrt(sigma_i)
+# If a peak is found at multiple scales with different wavelengths, the weighted average wavelength is computed by the programme:
 # SIGMA_LIST: List of Gaussian smoothing scales. Default is [2, 4, 16]
 SIGMA_LIST=
 
