modified:   .env_example 	modified:   debug.ipynb 	modified:   src/astro_agents.py 	modified:   src/base_agent.py 	modified:   src/context_manager.py 	modified:   src/utils.py 	modified:   src/workflow_orchestrator.py

--- a/.env_example
+++ b/.env_example
@@ -67,6 +67,9 @@ CONTINUUM_SMOOTHING_SIGMA=200
 # DATA SET
 DATA_SET=DESI
 
+# SNR THRESHOLD
+SNR_THRESHOLD=5
+
 ###############################################################################
 # Optional
 ###############################################################################
