modified:   .env_example 	modified:   debug.ipynb 	modified:   main.py 	modified:   src/astro_agents.py 	modified:   src/astro_agents_EN.py 	modified:   src/context_manager.py

--- a/.env_example
+++ b/.env_example
@@ -68,7 +68,8 @@ CONTINUUM_SMOOTHING_SIGMA=200
 DATA_SET=DESI
 
 # SNR THRESHOLD
-SNR_THRESHOLD=3
+SNR_THRESHOLD=5
+CONFUSION_PARAMETER=0.9
 
 ###############################################################################
 # Optional
